Include Bootstrap to make it work with all themes Add a new general setting to deactivate loading bootstrap. Fixed a css issue and make sure the easy pin is visible all the time. Create a new form element option template to create a different template for each form popover pin Start implementing the template structure

--- a/assets/css/easypin.css
+++ b/assets/css/easypin.css
@@ -127,3 +127,8 @@
         -ms-transform:  translate(0px,0px)  skewX(0deg) ;
     }
 }
+.carousel-inner {
+    position: relative;
+    overflow: visible !important;
+    width: 100%;
+}
